--- a/Admin/Pages/Similar/ExecutiveSummary.cshtml
+++ b/Admin/Pages/Similar/ExecutiveSummary.cshtml
@@ -12,7 +12,7 @@
 
 <br /><br />
 
-<span class="glyphicon glyphicon-save-file pull-right" onclick="print()"></span>
+<span class="glyphicon glyphicon-save-file relatively-down pull-right" onclick="print()"></span>
 
 <h1>Number of Similar Positions Per Percentage</h1>
 
@@ -26,8 +26,10 @@
             <th style="width: 33.33%;"><b class="sort-column-percents">Title English</b></th>
             <th style="width: 33.33%;"><b class="sort-column-percents">Title French</b></th>
             <th style="width: 25%;">
-                <div class="four-col-grid"><span class="sort-column-percents">100%</span>
-                    <span class="sort-column-percents">90%</span><span class="sort-column-percents">80%</span>
+                <div class="four-col-grid">
+                    <span class="sort-column-percents">100%</span>
+                    <span class="sort-column-percents">90%</span>
+                    <span class="sort-column-percents">80%</span>
                     <span class="sort-column-percents">70%</span>
                 </div>
             </th>
